# grpc-py

./: .gitignore  README.md  pyproject.toml
client/: client.py  client_w_dashboard.py  dataframe_service_pb2.py
client/assets/: styles.css
proto/: dataframe_service.proto
server/: dataframe_service_pb2.py  dataframe_service_pb2_grpc.py  server.py  server_f_dashboard.py
